Descrição das mudanças

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </h4>
 
       <div class="button-cta">
-        <a href="c:\Users\USUÁRIO\Downloads\Meu curriculo tech atualizado (3) (2).pdf" download="CV-Claudiana-Antunes" aria-label="Baixar curriculo claudiana Antunes">
+        <a href="img/curriculo atualizado.pdf" download="CV-Claudiana-Antunes" aria-label="Baixar curriculo claudiana Antunes">
           Currículo
         </a>
       </div>
